Crud marcas listo

--- a/BugHunter2/src/main/resources/templates/productos/formAgg.html
+++ b/BugHunter2/src/main/resources/templates/productos/formAgg.html
@@ -25,6 +25,12 @@
                     
                    
                 </select>
+                <label for="marca">Marca:</label>
+                <select class="form-control" id="empresa" name="empresa">
+                    
+                    
+                   
+                </select>
                 <button type="submit">Enviar</button>
             </form>
         </div> 
