--- a/BugHunter2/src/main/resources/templates/empresas/lista.html
+++ b/BugHunter2/src/main/resources/templates/empresas/lista.html
@@ -3,34 +3,44 @@
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+        <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/all.css}">
     </head>
     <body>
-        <div th:fragment="empresaslista"><h1>LISTA</h1>
+        <div th:fragment="empresaslista"><h2 style="margin-bottom: 30px">Empresas</h2>
         <div class="col-8">   
-            <h2>Empresas</h2>
-            <a href="/empresas/nuevo">Nuevo</a>
-            <table class="table table-striped table-hover">
+            <a type="button" class="btn btn-outline-light" style="background-color: #D98880" href="/empresas/nuevo"><i class="fa-solid fa-plus"></i> Nuevo</a>
+            <div style="padding-bottom: 10px"></div>
+            <table class="table table-hover">
                 <tr>
                     <th>Id</th>
                     <th>Empresa</th>
-                    <th>Editar</th>
-                    <th>Borrar</th>
+                    <th>Direccion</th>
+                    <th>Telefono</th>
+                    <th>  </th>
+                    <th>  </th>
                 </tr>
                 <tr th:each="e: ${empresas}">
                     <td th:text="${e.e_id}"></td>
                     <td th:text="${e.e_nombre}"></td>
                     <td th:text="${e.e_direccion}"></td>
                     <td th:text="${e.e_telefono}"></td>
-                    <td><a type="button" class="btn btn-success" th:href="@{/empresas/editar/}+${e.e_id}" >Editar</a></td>
-                    <td><a type="button" class="btn btn-danger" th:href="@{/empresas/borrar/}+${e.e_id}" >Borrar</a></td>
-                    <td><a type="button" class="btn btn-danger" th:href="@{/empresas/}+${e.e_id}+@{/productos}" >Productos</a></td>
+                    <td><a type="button" class="btn btn-outline-light" style="background-color: #D98880" th:href="@{/empresas/editar/}+${e.e_id}" ><i class="fas fa-edit"></i> Editar</a></td>
+                    <td><a type="button" class="btn btn-outline-light" style="background-color: #CB4335" th:href="@{/empresas/borrar/}+${e.e_id}" ><i class="fas fa-trash"></i> Borrar</a></td>
+                    <td><a type="button" class="btn btn-outline-light" style="background-color: #D98880" th:href="@{/empresas/}+${e.e_id}+@{/productos}" ><i class="fa-solid fa-users"></i> Productos</a></td>
                 </tr>
 
             </table>
+            <tfoot>
+            <div>...</div>
+  </tfoot>
+            <div style="padding-bottom: 70px"></div>
+            
              </div>
         </div>
+        
             </div> 
         </div>
     </body>
-</html>
+</html>      
                 
