--- a/BugHunter2/src/main/resources/templates/marcas/lista.html
+++ b/BugHunter2/src/main/resources/templates/marcas/lista.html
@@ -3,13 +3,16 @@
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+        <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/all.css}">
     </head>
     <body>
         <div th:fragment="marcaslista"><h1>LISTA</h1>
         <div class="col-8">   
             <h2>Marcas</h2>
-            <a href="/marcas/nuevo">Nuevo</a>
-            <table class="table table-striped table-hover">
+            <a type="button" class="btn btn-outline-light" style="background-color: #D98880" href="/marcas/nuevo"><i class="fa-solid fa-plus"></i>Nuevo</a>
+            <div style="padding-bottom: 10px"></div>
+            <table class="table table-hover">
                 <tr>
                     <th>Id</th>
                     <th>Marcas</th>
@@ -19,8 +22,8 @@
                 <tr th:each="m: ${marcas}">
                     <td th:text="${m.m_id}"></td>
                     <td th:text="${m.m_nombre}"></td>
-                    <td><a type="button" class="btn btn-success" th:href="@{/marcas/editar/}+${m.m_id}" >Editar</a></td>
-                    <td><a type="button" class="btn btn-danger" th:href="@{/marcas/borrar/}+${m.m_id}" >Borrar</a></td>
+                    <td><a type="button" class="btn btn-outline-light" style="background-color: #D98880" th:href="@{/marcas/editar/}+${m.m_id}" ><i class="fas fa-edit"></i>Editar</a></td>
+                    <td><a type="button" class="btn btn-outline-light" style="background-color: #CB4335" th:href="@{/marcas/borrar/}+${m.m_id}" ><i class="fas fa-trash"></i>Borrar</a></td>
                     <td><a type="button" class="btn btn-danger" th:href="@{/marcas/}+${m.m_id}+@{/productos}" >Productos</a></td>
                 </tr>
 
