--- a/BugHunter2/src/main/resources/templates/productos/formAgg.html
+++ b/BugHunter2/src/main/resources/templates/productos/formAgg.html
@@ -4,31 +4,46 @@
         <title>Inicio</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+        <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/all.css}">
     </head>
     <body>
         <div th:fragment="productoformAgg">
             <h1>Productos</h1>
-            <a href="/empresas/producto/">Volver</a>
+            <a type="button" class="btn btn-outline-light" style="background-color: #D98880" href="/empresas/producto/">Volver</a>
+            <div class="row g-3 align-items-center">
             <form th:action="@{/empresas/producto/guardar}" method="post" th:object="${producto}">
                 <input type="hidden" name="p_id" th:field="*{p_id}">
-                <input type="text" id="p_nombre" name="p_nombre" placeholder="Ingrese el nombre del producto" th:field="*{p_nombre}">
-                <input type="text" id="p_descripcion" name="p_descripcion" placeholder="Descripcion del producto" th:field="*{p_descripcion}">
-                <input type="text" id="p_almacenamiento" name="p_almacenamiento" placeholder="Memoria de Almacenamiento" th:field="*{p_almacenamiento}">
-                <input type="text" id="p_ram" name="p_ram" placeholder="Memoria RAM" th:field="*{p_ram}">
-                <input type="text" id="p_sistemaOperativo" name="p_sistemaOperativo" placeholder="Sistema Operativo" th:field="*{p_sistemaOperativo}">
-                <input type="text" id="p_procesador" name="p_procesador" placeholder="Procesador" th:field="*{p_procesador}">
-                <input type="text" id="p_pantalla" name="p_pantalla" placeholder="Pantalla" th:field="*{p_pantalla}">
+                <label for="disabledTextInput" class="form-label">Nombre</label>
+                <input type="text" id="p_nombre" name="p_nombre" class="form-control" aria-describedby="passwordHelpInline" placeholder="Ingrese el nombre del producto" th:field="*{p_nombre}">
+                <label for="disabledTextInput" class="form-label">Descripcion</label>
+                <input type="text" id="p_descripcion" name="p_descripcion" class="form-control" aria-describedby="passwordHelpInline" placeholder="Descripcion del producto" th:field="*{p_descripcion}">
+                <label for="disabledTextInput" class="form-label">Memoria de Almacenamiento</label>
+                <input type="text" id="p_almacenamiento" name="p_almacenamiento" class="form-control" aria-describedby="passwordHelpInline" placeholder="Memoria de Almacenamiento" th:field="*{p_almacenamiento}">
+                <label for="disabledTextInput" class="form-label">Ram</label>
+                <input type="text" id="p_ram" name="p_ram" class="form-control" aria-describedby="passwordHelpInline" placeholder="Memoria RAM" th:field="*{p_ram}">
+                <label for="disabledTextInput" class="form-label">Sistema Operativo</label>
+                <input type="text" id="p_sistemaOperativo" name="p_sistemaOperativo" class="form-control" aria-describedby="passwordHelpInline" placeholder="Sistema Operativo" th:field="*{p_sistemaOperativo}">
+                <label for="disabledTextInput" class="form-label">Procesador</label>
+                <input type="text" id="p_procesador" name="p_procesador" class="form-control" aria-describedby="passwordHelpInline" placeholder="Procesador" th:field="*{p_procesador}">
+                <label for="disabledTextInput" class="form-label">Pantalla</label>
+                <input type="text" id="p_pantalla" name="p_pantalla" class="form-control" aria-describedby="passwordHelpInline" placeholder="Pantalla" th:field="*{p_pantalla}">
                 
                 <label for="empresa">Empresa:</label>
                 <select class="form-control" id="empresa" name="empresa">
                     
+                    
+                   
                 </select>
                 <label for="marca">Marca:</label>
                 <select class="form-control" id="empresa" name="empresa">
                     
+                    
+                   
                 </select>
-                <button type="submit">Enviar</button>
+               
             </form>
+            </div>
         </div> 
     </body>
 </html>
